force-app/main/default/objects/Aadhar__c/Aadhar__c.object-meta.xml
<CustomObject>
    <label>Aadhar</label>
    <nameField>
        <displayFormat>Enroll-{0000}</displayFormat>
        <label>Aadhar Enrollment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Aadhar</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>