force-app/main/default/objects/Aadhar__c/fields/Aadhar_Number__c.field-meta.xml
<CustomField>
    <fullName>Aadhar_Number__c</fullName>
    <description>Captures Aadhar Number</description>
    <inlineHelpText>Captures Aadhar Number</inlineHelpText>
    <label>Aadhar Number</label>
    <precision>12</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>