force-app/main/default/objects/Aadhar__c/fields/age__c.field-meta.xml
<CustomField>
    <fullName>age__c</fullName>
    <formula>YEAR( TODAY() ) - YEAR(Date_Of_Birth__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>