force-app/main/default/objects/Aadhar__c/fields/age_in_days__c.field-meta.xml
<CustomField>
    <fullName>age_in_days__c</fullName>
    <formula>TODAY()  -  Date_Of_Birth__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>age_in_days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>