force-app/main/default/objects/Aadhar__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>Name of a aadhar holder</description>
    <inlineHelpText>Name of a aadhar holder</inlineHelpText>
    <label>Name</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>