force-app/main/default/objects/Aadhar__c/fields/Related_Aadhar__c.field-meta.xml
<CustomField>
    <fullName>Related_Aadhar__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Aadhar</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Is_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Aadhar__c.Id</field>
            <operation>notEqual</operation>
            <valueField>$Source.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Aadhar__c</referenceTo>
    <relationshipLabel>Aadhar</relationshipLabel>
    <relationshipName>Aadhar</relationshipName>
    <type>Lookup</type>
</CustomField>