force-app/main/default/objects/Aadhar__c/validationRules/Age_Greater_then_1_day.validationRule-meta.xml
<ValidationRule>
    <fullName>Age_Greater_then_1_day</fullName>
    <active>true</active>
    <errorConditionFormula>age_in_days__c    &lt;=  0</errorConditionFormula>
    <errorDisplayField>Date_Of_Birth__c</errorDisplayField>
    <errorMessage>Age should be atleast 1 day</errorMessage>
</ValidationRule>