force-app/main/default/objects/Aadhar__c/listViews/Aadhaar_List_View.listView-meta.xml
<ListView>
    <fullName>Aadhaar_List_View</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Date_Of_Birth__c</columns>
    <filterScope>Mine</filterScope>
    <label>Aadhaar List View</label>
</ListView>