force-app/main/default/objects/Aadhar__c/listViews/MyList.listView-meta.xml
<ListView>
    <fullName>MyList</fullName>
    <columns>NAME</columns>
    <columns>Aadhar_Number__c</columns>
    <columns>Name__c</columns>
    <filterScope>Mine</filterScope>
    <label>MyList</label>
</ListView>